syntax = "proto3";
package management_service;

option go_package = "./management_service";

// this module is made for internal use, especially administers, so that they could add/update/delete content for our database.
service ManagementService {
    // this service will have an interceptor that will make sure only admin can do operations in here
    // the interceptor will call the account_auth_service.proto

    // rpc IsAdmin(IsAdminRequest) returns (IsAdminResponse);

    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);

    rpc AddPlace(AddPlaceRequest) returns (AddPlaceResponse);
    rpc UpdatePlace(UpdatePlaceRequest) returns (UpdatePlaceResponse);
    rpc DeletePlace(DeletePlaceRequest) returns (DeletePlaceResponse);
}

// message IsAdminRequest {
//     string jwt = 1;
// }

// message IsAdminResponse {
//     optional string error = 1;
//     string yes = 2;
// }

message GetUsersRequest {
    int32 page_size = 1;
    int32 page_number = 2;
}

message GetUsersResponse {
    optional string error = 1;
    repeated UserModel user = 2;
}

message AddPlaceRequest {
    LocationOfFreeMap location_of_free_map = 1;
}

message AddPlaceResponse {
    optional string error = 1;
    bool success = 2;
}

message UpdatePlaceRequest {
    LocationOfFreeMap location_of_free_map = 1;
}

message UpdatePlaceResponse {
    optional string error = 1;
    bool success = 2;
}

message DeletePlaceRequest {
    int32 location_id = 1;
}

message DeletePlaceResponse {
    optional string error = 1;
    bool success = 2;
}


//-------yingshaoxo-------

message UserModel {
    string email = 1;
    optional string username = 2;
    optional string head_image = 3; //base64 string of an image
    optional int32 sex = 4; //AI detect. 0: female, 1: male
    optional int32 age = 5; //AI detect.
}

message LocationOfFreeMap {
    optional int32 location_id = 1;
    optional string uploader_email = 2;
    string name = 3;
    double y_latitude = 4; // up to 5 digits after decimal
    double x_longitude = 5; // up to 5 digits after decimal
    double scores = 6;
    bool open_all_day = 7;
    bool has_charger = 8;
    bool has_wifi = 9;
    bool has_water = 10;
    bool has_hot_water = 11;
    bool has_desk = 12;
    bool has_chair = 13;
    bool has_toilet = 14;
    bool has_showering = 15; // must make sure there can take showering
    bool has_package_receiving_station = 16;
    bool has_kfc = 17;
    bool has_mcdonald = 18;
    bool has_store = 19;
    // string open_and_close_time = 20;
}